--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "client",
+  "homepage": "https://ViktorieSrnkova.github.io/weaProjectClient",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "gh-pages": "^4.0.0",
     "http-server": "^14.1.1 ",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npx http-server ./build -a 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
