--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "gh-pages": "^4.0.0",
-    "http-server": "^14.1.1 ",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-singleton-hook": "^4.0.1",
-    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "npx http-server ./build -a 0.0.0.0",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
